Refactor README.md to enhance clarity and organization, updating repository description, layout, and navigation sections